--- a/data_scraper/public/security/sign_up/sign_up.html
+++ b/data_scraper/public/security/sign_up/sign_up.html
@@ -12,25 +12,10 @@
     <div id="stage">
       <div id="input_window">
         <form action="" method="post" id="input">
-          <h1>sign-up</h1>
-
-          <input class="input" type="text" id="username" name="username"
-                 placeholder="create username" autocomplete="username"
-                 enterkeyhint="send" />
-
-          <input class="input" type="password" id="password" name="password"
-                 placeholder="create password" autocomplete="new-password"
-                 enterkeyhint="send" />
-
-          <input class="input" type="password" id="password_double"
-                 placeholder="confirm password" autocomplete="new-password"
-                 enterkeyhint="send" />
-
-          <div id="buttons">
-            <button class="button" id="sign-in" type="button" name="sign-in">sign-in</button>
-            <p id="error"></p>
-            <button class="button" id="send_button" type="submit">Send</button>
-          </div>
+          <h1>Create or Join Class</h1>
+          <button class="input" id="join" name="join">Join Class</button>
+          <button class="input" id="create" name="create">Create Class</button>
+          <button class="button" id="sign-in" type="button" name="sign-in">sign-in</button>
         </form>
       </div>
     </div>
