small changes to some text

--- a/data_scraper/public/security/sign_up/create/create.html
+++ b/data_scraper/public/security/sign_up/create/create.html
@@ -12,7 +12,7 @@
     <div id="stage">
       <div id="input_window">
         <form action="" method="post" id="input">
-          <h1>sign-up</h1>
+          <h1>Create Class</h1>
 
           <input class="input" type="text" id="username" name="username"
                  placeholder="create username" autocomplete="username"
@@ -27,7 +27,7 @@
                  enterkeyhint="send" />
 
          <input class="input" type="tex" id="class_code" name="class_code"
-                 placeholder="Enter Class Code" enterkeyhint="send" />
+                 placeholder="Enter Canvas Code" enterkeyhint="send" />
 
           <div id="buttons">
             <button class="button" id="back" type="button" name="back">back</button>
