--- a/data_scraper/public/security/sign_up/join/join.html
+++ b/data_scraper/public/security/sign_up/join/join.html
@@ -12,7 +12,7 @@
     <div id="stage">
       <div id="input_window">
         <form action="" method="post" id="input">
-          <h1>sign-up</h1>
+          <h1>Join Class</h1>
 
           <input class="input" type="text" id="username" name="username"
                  placeholder="create username" autocomplete="username"
